modificando mas datos para swagger
